css/styles.css
/* ... */
/*subpage general*/

header.subpage-header{
  position: fixed;
  width: 100%;
  margin: 0 auto;
  padding: 20px 0 0 0;
  background-color: rgba(255, 255, 255, 1.0);
  transition: all 0.2s ease;
  border-bottom: 1px solid #bababa;
}

.subpage .container {
  padding: 230px 0 100px 0;
  margin: 0 auto;
  width: 100%;
}

.subpage-heading {
  color: #fff;
  margin-top: 40px;
  font-size: 32px;
  letter-spacing: 2px;
  font-family: 'IM Fell English', serif;
}

.subpage-text, ul, li {
  font-weight: 300;
  text-align: left;
  color: rgba(0,0,0,0.7);
  font-size: 22px;
  line-height: 28px;
}

.subpage p a{
  color: #fff;
}

@media screen and (min-width: 768px) {

  header.subpage-header {
    padding: 44px 0 15px 0;
  }

  .subpage-heading {
    margin-top: 0;
  }

}

/*store*/

.store-page {
  background-color: rgba(95, 165, 202, 1.0);
}

.store-page .container {
  background-color: rgba(95, 165, 202, 1.0);
}

.store-page main {
  width: 90%;
  max-width: 1200px;
  margin: 0 auto;
  padding-bottom: 30px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.store-details {
  background-color: #fff;
  padding: 30px;
  display: flex;
  flex-direction: row;
  width: 100%;
}

.store-details>div:nth-child(1) {
  width: 60%;
}

.store-details ul {
  list-style: none;
  padding: 0;

}

.store-details li {
  font-size: 16px;
  font-weight: 500;
  text-align: left;
}

.store-page section {
  padding-bottom: 50px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.store-page-image {
  width: 100%;
  margin: 5px 0;
}

.store-page-main-content {
  width: 100%;
}

.store-page-main-content a{
  color: #fff;
}


@media screen and (min-width: 768px) {

  .store-page main {
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
  }

  .store-page section {
    margin-top: 50px;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
  }

  .store-page-image {
    width: 33%;
    margin: 0;
  }

  .store-page-main-content {
    margin-right: 30px;
  }

  .store-details {
    padding: 20px;
    flex-direction: column;
    width: 40%;
    text-align: center;
  }

  .store-details li {

    text-align: center;
  }

  .store-details>div:nth-child(1) {
    width: 100%;
  }

}

/* shelter */


.shelter-page {
  background-color: #ed6c79;
}

.shelter-page .container {
  background-color: #ed6c79;
}

.shelter-page main {
  width: 90%;
  max-width: 1200px;
  margin: 0 auto;
  padding-bottom: 50px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.shelter-page-main-content {
  width: 100%;
}

.shelter-page-image {
  width: 100%;
}

.stats-heading {
  text-align: center;
}

section.stats {
  width: 90%;
  max-width: 1200px;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.stat {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  text-align: center;
  padding: 0 20px;
  width: 45%;
  height: 150px;
  margin: 5px;
  border-radius: 6px;
  background-color: #fff;
}

.number {
  font-size: 80px;
  line-height: 100px;
  font-weight: 700;
  font-family: 'IM Fell English', serif;
  color: #ed6c79;
}

.detail {
  font-size: 18px;
  line-height: 16px;
}

.shelter-page .donate-button {
  max-width: 200px;
  margin: 0;
}

@media screen and (min-width: 667px) {

  .stats {
    justify-content: space-between;

  }
  .stat {
    width: 23%;
  }
}

@media screen and (min-width: 768px) {

  .shelter-page main {
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
  }

  .shelter-page-image {
    width: 45%;
    margin: 0;
  }

  .shelter-page-main-content {
    width: 50%;
  }

  .stats {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding: 10px 0 50px 0;
  }

}

/* subpage section with image right/text left*/

.text-left-img-right {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 90%;
  margin: 0 auto;
  padding: 50px 0;
}

.right-side-img {
  width: 100%;
}

@media screen and (min-width: 667px) {

  .text-left-img-right {
    display: flex;
    flex-direction: row;
    align-items: center;
  }

  .right-side-img {
    width: 50%;
    margin-left: 20px;
  }

}

/*subpage section text full width*/

.text-full-width {
  width: 90%;
  margin: 0 auto;
  padding: 50px 0;
}

/*image gallery*/
.image-gallery {
  width: 90%;
  margin: 0 auto;
  max-width: 1200px;
}

/*footer */

footer {
  background-color: #333;
  width: 100%;
  position: relative;
  left: 0;
  bottom: 0;
  z-index: -100;
  color: #fff;
  font-weight: 100;
}

.footer-thirds {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
}

.footer-third {
  display: flex;
  flex-direction: row;
  width: 90%;
  margin: 20px auto;
  align-items: center;
  justify-content: center;

}

.first {
  text-align: left;
  padding: 0 30px;
  justify-content: space-between;
}

.first img {
  width: 33px;
  margin-right: 20px;
}

.second {
  text-align: left;
  order: -1;
  padding-top: 30px;
  line-height: 22px;
  justify-content: space-around;
}

.second img {
  width: 130px;
}

.last {
  font-size: 12px;
  padding: 0px 30px;
}

.last img {
  width: 100px;
  margin-right: 20px;
}

.second .footer-fb-icon {
  width: 35px;
}

hr {
  margin: 20px 0 0 0;
  padding: 0;
  border: 1px solid rgba(255, 255, 255, .3);
}

.copy-credit {
  padding: 10px;
  margin: 0;
  text-align: center;
}

#sass-biz-link {
 color: green;
}
/* ... */

